<resources>
    <string name="http_www_joakim_ribier_fr">http://www.joakim-ribier.fr</string>
    <string name="action_background_choice_green">#99CC00</string>
    <string name="action_background_choice_blue">#33B5E5</string>
    <string name="action_background_choice_purple">#AA66CC</string>
    <string name="action_background_choice_orange">#FFBB33</string>
    <string name="action_background_choice_red">#FF4444</string>
    <string name="app_widget_name">JOneTouch - Action 2x1</string>
    <string name="app_widget_delete_because_action_is_deleted">The Action does not exist, you can delete this widget.</string>
    <string name="app_name">JOneTouch SSH</string>
    <string name="set_clipboard_password">The password has been copied to the clipboard.</string>
    <string name="failed">An error occurred, please try again or contact support.</string>
    <string name="incorrect_data">The data entered is incorrect.</string>
    <string name="no_button">Yes</string>
    <string name="yes_button">No</string>
    <string name="add">add</string>
    <string name="image_content_description">logo</string>
    <string name="back_pressed">Press a second time to disconnect from the application.</string>
    <string name="in_process">In process &#8230;</string>
	<string name="set_clipboard_message">The message has been copied to the clipboard.</string>
    <string name="activity_tool">menu</string>
    <string name="activity_home">home</string>
    <string name="activity_logout">disconnect</string>
    <string name="activity_refresh">refresh</string>
    <string name="activity_help">help</string>
    <string name="my_menu_add_action">Add an action</string>
    <string name="my_menu_help">Help</string>
    <string name="my_menu_add_server_connection">Add an `Ssh` connection</string>
    <string name="my_menu_remove_server_connection">delete</string>
    <string name="my_menu_nothing_server_connection">(click above to create a new connection)</string>
    <string name="my_menu_update_server_connection">update</string>
    <string name="my_menu_lock">Forget my password</string>
    <string name="my_menu_unlock">Save my password</string>
    <string name="my_menu_logout">Disconnect</string>
    <string name="my_menu_about_of">`Fork me` on GitHub</string>
    <string name="my_menu_backup">Backup my data</string>
    <string name="my_menu_restoration">Restore my data</string>
    <string name="create_account_email">Email address:</string>
    <string name="create_account_password">Password ( minimum 8 characters ):</string>
    <string name="create_account_button_ok">Create account</string>
    <string name="create_account_error_validation_email">The email address is invalid.</string>
    <string name="create_account_error_validation_pwd">The password is invalid.</string>
    <string name="create_account_failed">An error occurred while creating the account.</string>
    <string name="help_dialog_title">Welcome</string>
    <string name="help_dialog_text_global">Execute quickly scripts in SSH on your external servers.</string>
    <string name="help_dialog_text_global_1">Step by step :</string>
    <string name="help_dialog_text_global_2">1. Create new ssh connection from the left menu.</string>
    <string name="help_dialog_text_global_3">2. Check your ssh connection by clicking on its name after created it.</string>
    <string name="help_dialog_text_global_4">3. Create a new action from the left menu.</string>
    <string name="help_dialog_text_global_5">4. Add sh scripts from the modifications view.</string>
    <string name="help_dialog_text_global_6">5. Execute your new action.</string>
    <string name="help_dialog_text_view">From this view, you have the possibility to:</string>
    <string name="help_dialog_text_main_view">The application main view contains the list of all your actions.</string>
    <string name="help_dialog_text_main_view_edit_action">Update action information and add sh scripts.</string>
    <string name="help_dialog_text_main_view_execute_action">Execute the action.</string>
    <string name="help_dialog_text_main_view_list_action">Display the list of action sh scripts.</string>
    <string name="help_dialog_text_main_view_connection_action">Display the ssh connection of the action.</string>
    <string name="help_dialog_text_main_view_noconnection_action">None ssh connection on the action.</string>
 	<string name="help_dialog_text_edit_action_view">The most important second view , is the modifications view with the possibility to add sh scripts to an action.</string>
    <string name="help_dialog_text_edit_action_edit">Update the name, the description, the background color and the ssh server connection of the action.</string>
    <string name="help_dialog_text_edit_action_delete">Delete the action with its scripts or delete only one sh script.</string>
    <string name="help_dialog_text_edit_action_update_script">Add or update the sh scripts of the action.</string>
    <string name="help_dialog_text_backup">You can make a backup of your ssh connections and your actions from the left menu.</string>
    <string name="help_dialog_text_pwd">For the more security, the application is accessible by a password.</string>
    <string name="help_dialog_text_support">In case of problem or question, please contact support by e-mail.</string>
    <string name="log_in_dialog_title">Connect to the application</string>
    <string name="log_in_dialog_pwd_wrong">The password is incorrect.</string>
    <string name="add_connection_dialog_title">New connection</string>
    <string name="add_connection_dialog_title_txtv">Title :</string>
    <string name="add_connection_dialog_host_txtv">Host ( domain / IP ) :</string>
    <string name="add_connection_dialog_description_txtv">Description : </string>
    <string name="add_connection_dialog_type_txtv">Connection type :</string>
    <string name="add_connection_dialog_login_txtv">User : </string>
    <string name="add_connection_dialog_pwd_txtv">Password :</string>
    <string name="add_connection_dialog_validation_password">The password is required.</string>
    <string name="add_connection_dialog_validation_connextion_exists">A connection with the same host already exist.</string>
    <string name="add_connection_dialog_port">Port :</string>
    <string name="add_connection_dialog_port_hint">22</string>
    <string name="server_connection_type_no_authentication">no authentication</string>
    <string name="server_connection_type_ssh_authentication">ssh with password</string>
    <string name="update_server_connection_my_dialog_title">Updating connection</string>
    <string name="update_server_connection_my_dialog_success">Сonnection updated</string>
    <string name="delete_server_connection_my_dialog_title">Deleting connection</string>
    <string name="delete_server_connection_my_dialog_text">Do you want to remove this ssh connection ?</string>
    <string name="delete_server_connection_my_dialog_type_no">connection without authentication</string>
    <string name="delete_server_connection_my_dialog_type_auth">connection with password</string>
    <string name="delete_server_connection_my_dialog_replace">replace</string>
    <string name="delete_server_connection_my_dialog_success">Connection deleted</string>
    <string name="choice_connection_dialog_title">Connection choice</string>
    <string name="choice_connection_dialog_unknow">no connection selected</string>
    <string name="choice_action_for_widget_dialog_title">Please choose action for this widget.</string>
    <string name="choice_action_for_widget_dialog_unknow">Please choose action or cancel.</string>
    <string name="my_dialog_title">Dialog</string>
    <string name="my_dialog_positive_button">OK</string>
    <string name="my_dialog_negative_button">Cancel</string>
    <string name="action_view_layout_no_server_connection">The connection is not defined, execute action and select connection.</string>
    <string name="action_view_server_connection">The connection is defined on %1$s</string>
    <string name="about_of_loading">loading &#8230;</string>
    <string name="add_action_dialog_title">New action</string>
    <string name="update_action_dialog_title">Updating action</string>
    <string name="add_or_update_action_title_label">Title :</string>
    <string name="add_or_update_action_description_label">Description :</string>
    <string name="add_or_update_action_server_spinner_label">Ssh connection &#8230;</string>
    <string name="add_or_update_action_public_label">Choose SSH connection when executed.</string>
    <string name="add_or_update_action_script_label">Copy and paste your script here or select a template from the list above.\n\nYou have the ability to run multiple scripts simultaneously according to the following separator: #script suivant#.\n\Script template :\n\nls -l /var/log/myapp/\necho \"empty directory\"\n#script suivant#\nmkdir /home/savelog\ncp /var/log/myapp/* /home/savelog/\necho \"save log\"\n#script suivant#\nls -l /home/savelog/\necho \"OK\"</string>
    <string name="add_or_update_action_seperator_label">insert separator tag</string>
    <string name="delete_action_dialog_title">Delete action</string>
    <string name="delete_action_dialog_text">Do you want to remove this action?</string>
    <string name="action_list_top_layout_all">All actions</string>
    <string name="update_action_script_dialog_title">Update script</string>
    <string name="delete_action_script_dialog_title">Delete script</string>
    <string name="delete_action_script_dialog_text">Do you want to remove this script ?</string>
    <string name="command_executor_execute">Executing script &#8230;</string>
    <string name="command_executor_try_connection">connection attempt at %1$s&#8230;\n</string>
    <string name="command_executor_connect">connected</string>
    <string name="command_executor_desconnect">disconnected</string>
    <string name="command_executor_failed">connection error :\n\n{%1$s}</string>
    <string name="choice_color_action_dialog_title">Choose background color for the action.</string>
    <string name="choice_backup_data_dialog_title">Backup settings</string>
    <string name="choice_backup_data_dialog_choice_1">Send the backup by e-mail.</string>
    <string name="choice_backup_data_dialog_choice_2">Make only a copy/paste of the backup.</string>
    <string name="choice_backup_data_dialog_set_clipboard">The backup have been copied to the clipboard.</string>
    <string name="choice_backup_data_dialog_by_email_subject">JOneTouch Backup - %1$s</string>
    <string name="choice_backup_data_dialog_chooser_client">Choice client mail</string>
    <string name="choice_backup_data_dialog_checkbox_if_encrypt_password">I want my passwords encrypted in the backup. For the restoration of the backup, I will need my connection password.</string>
    <string name="choice_backup_data_dialog_checkbox_if_encrypt_password_warning">If I choose not encrypt my passwords, they will then be clear in the backup.</string>
    <string name="choice_restore_data_dialog_title">Restore settings</string>
    <string name="choice_restore_data_dialog_restore_action">I want to restore all of my actions.</string>
    <string name="choice_restore_data_dialog_restore_servers">I want to restore all of my server connections.</string>
    <string name="choice_restore_data_dialog_restore_reset">I want to delete all content before to start the restoration.</string>
    <string name="choice_restore_data_dialog_backup">Please paste the content of the backup here with the top buttons.</string>
	<string name="choice_restore_data_dialog_pwd">The password of the backup for to decrypt the other passwords :</string>
	<string name="choice_restore_data_dialog_end_info">End of the restoration.</string>
    <string name="choice_restore_data_dialog_parameters_info">Restoration settings:</string>
</resources>