<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_tool"
        android:icon="@drawable/tool"
        android:showAsAction="collapseActionView"
        android:title="@string/activity_tool"
        android:visible="false">
    </item>
    <item
        android:id="@+id/action_options_refresh"
        android:icon="@drawable/refresh"
        android:showAsAction="ifRoom"
        android:title="@string/activity_refresh">
    </item>
    <item
        android:id="@+id/action_options_help"
        android:icon="@drawable/help"
        android:showAsAction="ifRoom"
        android:title="@string/activity_help">
    </item>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout"
        android:showAsAction="ifRoom"
        android:title="@string/activity_logout">
    </item>

</menu>