<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/addOrUpdateActionTitleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_or_update_action_title_label"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/addActionViewTitleEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="text|textNoSuggestions"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/addOrUpdateActionDescTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_or_update_action_description_label"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/addActionViewDescriptionEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine|textNoSuggestions"
        android:lines="5" />

    <Spinner
        android:id="@+id/addActionViewServerConnectionSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:id="@+id/addActionViewAskCheckbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_or_update_action_public_label"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sp" />

</LinearLayout>